Updated padding of buttons

--- a/Projects/Ex 3 - Card/style1.css
+++ b/Projects/Ex 3 - Card/style1.css
@@ -45,7 +45,7 @@ body {
   box-shadow: 1px 1px 5px 1px grey;
   border-radius: 20px;
   color: rgb(56, 55, 55);
-  padding: 5px;
+  padding: 5px 9px;
   position: relative;
   left: 30px;
   top: 25px;
